# newline_stuff

./: .gitignore  CLAUDE.md  debug_project_01.ipynb
llm_utils/: pyproject.toml
llm_utils/llm_utils/: __init__.py  client.py  config.py
mini-project-1/: mini-project-1.md
mini-project-1/solution/: .env.example  main.py  models.py  phase1_generation.py  phase2_validation.py  phase5_analysis.py  prompts.py
mini-project-1/solution/failure_modes/: poor_quality_tips.yaml  (+3 more)
rag_common/: README.md  pyproject.toml  smoke_test.py
rag_common/notebooks/: rag_common_tour.ipynb  rag_pipelines_tour.ipynb
rag_common/rag_common/: __init__.py  base.py  chunkers.py  metrics.py  models.py  parsers.py  retrievers.py  vector_store.py
rag_common/tests/: test_chunkers.py  test_metrics.py  test_retrievers.py  test_vector_store.py
synthetic_data_diy/: synthetic_data_diy.md
synthetic_data_diy/data/: shared_questions.json
synthetic_data_diy/solution/: .gitignore  config.py  requirements.txt
synthetic_data_diy/src/: .env.example  .gitignore  README.md  agreement.py  baselines.py  baselines.yaml  benchmark_cache.py  config.py  human_labeler.py  langfuse_dash.py  llm_client.py  main.py  mock_seeder.py  models.py  observability.py  phase1_generation.py  phase2_validation.py  phase3_benchmark.py  phase3_failure_labeling.py  phase4_failure_labeling.py  phase4_quality_eval.py  phase5_analysis.py  phase5_quality_eval.py  phase6_analysis.py  phase6_correction.py  phase7_benchmark.py  phase7_correction.py  prompts.py  requirements.txt  schema.py
synthetic_data_resume_coach/: .gitignore
(+73 files in other folders)
